--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,24 +3,32 @@ owner: upptime # Your GitHub organization or username, where this repository liv
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: BlazeLS
+    url: https://blazels.xyz
+  - name: CDN
+    url: https://cdn-user.blazels.xyz
+  - name: Patch
+    url: https://cdn-up.blazels.xyz
+  - name: Storage
+    url: https://s3.jagoanstorage.com
+  - name: SQLServ
+    check: "tcp-ping"
+    url: azure.blazels.xyz
+    port: 1433
+  - name: Gamesvr
+    check: "tcp-ping"
+    url: server.blazels.xyz
+    port: 14009
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  cname: status.blazels.xyz
+  # baseUrl: /stats
+  logoUrl: https://blazels.xyz/logo.png
   name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "**BLAZESTAT** is the tools to check status Server Blaze."
+  introMessage: "Blaze Saga"
   navbar:
     - title: Status
       href: /
