--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: blazels # Your GitHub organization or username, where this repository lives
+repo: stats # The name of this repository
 
 sites:
   - name: BlazeLS
@@ -26,7 +26,7 @@ status-website:
   cname: status.blazels.xyz
   # baseUrl: /stats
   logoUrl: https://blazels.xyz/logo.png
-  name: Upptime
+  name: Blazestats
   introTitle: "**BLAZESTAT** is the tools to check status Server Blaze."
   introMessage: "Blaze Saga"
   navbar:
